# flask_projects

./: flask_project.py  pyproject.toml
tests/: test_flask_projects.py
