[tool.poetry]
name = "flask_projects"
version = "0.1.0"
description = ""
authors = ["Brannon Starnes <brannlee808@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
